--- a/front/index.html
+++ b/front/index.html
@@ -8,7 +8,32 @@
     <title>Banderas por el mundo</title>
   </head>
   <body>
-    
+    <h1>Banderas por el mundo</h1>
+    <section class="menu-container">
+      <div class="menu-container-btn">
+        <h3>Jugar</h3>
+      </div>
+      <div class="menu-container-btn">
+        <h3>Score</h3>
+      </div>
+      <div class="menu-container-btn">
+        <h3>Opciones</h3>
+      </div>
+      <div id="help-btn" class="menu-container-btn">
+        <h3>Ayuda</h3>
+      </div>
+    </section>
+
+    <dialog id="help-modal" role="dialog" aria-modal="true">
+      <h4>Ayuda</h4>
+      <div>
+        <p id="close-btn">X</p>
+        <div class="backdrop">
+          Hola
+        </div>
+      </div>
+    </dialog>
+
     <script type="module" src="/main.js"></script>
   </body>
 </html>
